# dataset

./: .gitignore  CMakeLists.txt  dataset_api.c  dataset_api.h
dataset/: CMakeLists.txt
dataset/libgit2/: CMakeLists.txt  dataset_api.c
include/: dataset_api.h
